@@ -7,9 +7,11 @@ In the following text, the tag "USER" indicates a significant change that will i
 The tag "DEVELOPER" indicates a change that significantly impacts the code but is likely not visible to the user. 
 
 
+10th December 2020
+- User: On bake completion only a single Slack message is now sent.
 
 
-Install instructions for autoROI
+** Install instructions for autoROI **
 - MATLAB R2019b. Start with softwareOpenGl mode if you notice rare random crashes
 - In your default recipe which is to be loaded each time ensure you have "numOverlapZPlanes: 0.0" in the mosaic section 
 - You will likely to have to play with the fields in SIBT.setings.tileAcq until the preview image looks correct. 
